k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: specai-backend
  namespace: codecatalyst

spec:
  replicas: 1

  selector:
    matchLabels:
      app: specai-backend

  template:
    metadata:
      labels:
        app: specai-backend

    spec:
      containers:
        - name: specai-backend
          image: beetle1110/specai-backend:v6

          imagePullPolicy: Always

          ports:
            - containerPort: 5000
