k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: specai-frontend
  namespace: codecatalyst

spec:
  replicas: 1

  selector:
    matchLabels:
      app: specai-frontend

  template:
    metadata:
      labels:
        app: specai-frontend

    spec:
      containers:
        - name: specai-frontend
          image: alvinharist/specai-frontend:v5

          imagePullPolicy: Always

          ports:
            - containerPort: 3000
