k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: specai-backend-service
  namespace: codecatalyst

spec:
  selector:
    app: specai-backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

  type: ClusterIP
