k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: specai-frontend-service
  namespace: codecatalyst

spec:
  selector:
    app: specai-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
