k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: specai-ingress
  namespace: codecatalyst

spec:
  rules:
    - host: codecatalyst.hackathon.sev-2.com

      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: specai-backend-service
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: specai-frontend-service
                port:
                  number: 80
